<?xml version="1.0"?>
<package format="2">
  <name>pcl_converter</name>
  <version>0.0.0</version>
  <description>The pcl_converter package</description>

  <maintainer email="b.h.a.vandenberg@student.tudelft.nl">B van den Berg</maintainer>
  <maintainer email="q.w.a.vanderslot@student.tudelft.nl">K van der Slot</maintainer>
  <license>TODO</license>

  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>

  <build_depend>car_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pcl_include</build_depend>
  <build_depend>iostream</build_depend>
  <build_depend>sensor_msgs</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>iostream</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
